Header Section Done

--- a/index.html
+++ b/index.html
@@ -8,13 +8,64 @@
 
     <!--==| All CSS Link Integration Start |==-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
 
+    <link rel="stylesheet" href="css/style.scss">
     <link rel="stylesheet" href="css/style.css">
     <!--==| All CSS Link Integration Start |==-->
 </head>
 <body>
-    <h1>Hello</h1>
+    <!--==| Header Section Start Here |==-->
+    <header class="">
+        <!--==== Navigation Menu Start ====-->
+        <div class="container nav-section fixed-top  py-lg-2 py-md-2 py-0 g-0 px-sm-0 px-3">
+            <div class="nav-menu ">
+                <nav class="navbar navbar-expand-lg">
+                    <div class="container-fluid g-0">
+                        <div class="webiste-logo">
+                            <a class="navbar-brand  fw-bold" href="#">
+                                <img class="logo" src="images/logo.svg" alt="">
+                            </a>
+                        </div>
+                        <button class="navbar-toggler p-0 border-0 bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="bi bi-text-right fs-1"></i>
+                        </button>
+                        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto my-auto mb-2 mb-lg-0 d-flex align-items-center">
+                            <li class="nav-item  text-center mx-xl-3 mx-lg-2 mx-md-2">
+                            <a class="nav-link active fw-bold fs-5" aria-current="page" href="index.html"> <img src="images/user.png" alt="User Image"><span class="small-font">LOGIN</span> </a>
+                            </li>
+                            <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2" >
+                            <a href="#register">
+                                <button class="btn border secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill" >Book Now</button>
+                            </a>
+                            </li>
+                            <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2">
+                            <a class="nav-link fw-bold fs-5" href="#about"><i class="bi bi-text-right fs-3"></i></a>
+                            </li>
+                        </ul>
+                        
+                        </div>
+
+                    </div>
+                    </nav>
+            </div>
+        </div>
+        <!--==== Navigation Menu End ====-->
+    </header>
+    <!--==| Header Section End Here |==-->
+
+    <!--==| Main Section Start Here |==-->
+
+    <!-- Banner Section Start Here -->
+    <section class="banner banner-bg">
+        <div class="container  ">
+
+        </div>
+    </section>
+    <!-- Banner Section Start Here -->
+
+    <!--==| Main Section End Here |==-->
 
     <!--==| All JS Link Integration Start |==-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
