--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Ride Centric | Lets Book a Ride</title>
 
     <!--==| All CSS Link Integration Start |==-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.scss">
     <link rel="stylesheet" href="css/style.css">
@@ -31,19 +32,21 @@
                         <i class="bi bi-text-right fs-1"></i>
                         </button>
                         <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto my-auto mb-2 mb-lg-0 d-flex align-items-center">
-                            <li class="nav-item  text-center mx-xl-3 mx-lg-2 mx-md-2">
-                            <a class="nav-link active fw-bold fs-5" aria-current="page" href="index.html"> <img src="images/user.png" alt="User Image"><span class="small-font">LOGIN</span> </a>
-                            </li>
-                            <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2" >
-                            <a href="#register">
-                                <button class="btn border secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill" >Book Now</button>
-                            </a>
-                            </li>
-                            <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2">
-                            <a class="nav-link fw-bold fs-5" href="#about"><i class="bi bi-text-right fs-3"></i></a>
-                            </li>
-                        </ul>
+                            <ul class="navbar-nav ms-auto my-auto mb-2 mb-lg-0 d-flex align-items-center">
+                                <li class="nav-item  text-center mx-xl-3 mx-lg-2 mx-md-2">
+                                    <a class="nav-link active fw-bold fs-5" aria-current="page" href="#login">      
+                                        <img class="user-img" src="images/user.png" alt="User Image"><span class="small-font text-white">LOGIN</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2" >
+                                    <a href="#book-now">
+                                        <button class="btn hover:text-white book-now secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill" >Book Now</button>
+                                    </a>
+                                </li>
+                                <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2">
+                                    <a class="nav-link fw-bold fs-5" href="#nav-collapse"><i class="bi bi-text-right text-white fs-3"></i></a>
+                                </li>
+                            </ul>
                         
                         </div>
 
@@ -59,11 +62,45 @@
 
     <!-- Banner Section Start Here -->
     <section class="banner banner-bg">
-        <div class="container  ">
+        <div class="container banner-margin d-flex align-items-center vh-100 justify-content-end  z-3">
+            <div class="book-form p-4 rounded-3">
+                <h3 class="text-capitalize text-white font-weight-bold">let’s book you a ride</h3>
+                <div>
+                    <ul class="d-flex tab justify-content-around ps-0 mt-3 py-1">
+                        <li><a class="text-decoration-none text-uppercase text-white" href="#">One Day</a></li>
+                        <li><a class="text-decoration-none text-uppercase text-white" href="#">Hourly</a></li>
+                    </ul>
 
+                    <ul class="d-flex tab-i  ps-0">
+                        <li class="flex-fill tab me-2 py-1"><img class="user-img me-2" src="images/date.png" alt="">  <a class="text-decoration-none text-white" href="#">When</a></li>
+                        <li class="flex-fill tab py-1"><img class="user-img me-2" src="images/date.png" alt=""> <a class="text-decoration-none text-white" href="#">Time</a></li>
+                    </ul>
+                    <ul class="d-flex tab-i  ps-0">
+                        <li class="flex-fill tab me-2 py-1"><img class="user-img me-2" src="images/location.png" alt="">  <a class="text-decoration-none text-white" href="#">Pick Up Location</a></li>
+                    </ul>
+                </div>
+                <div class="cta d-flex justify-content-end py-2">
+                    <a href="#book-now">
+                        <button class="btn hover:text-white book-now book-now2 text-white  px-md-3 px-sm-2 px-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill small-font font-weight-bold" >Next Step</button>
+                    </a>
+                </div>
+            </div>
+            <!-- Book Form ENd -->
         </div>
     </section>
-    <!-- Banner Section Start Here -->
+    <!-- Banner Section End Here -->
+
+    <!-- Brand Section Start Here -->
+    <section class="container brand-section py-2">
+        <div class="brand">
+            <h4 class="text-capitalize text-white font-weight-bold text-center">TRUSTED BY THE BEST</h4>
+            <div class="text-center">
+                <img class="img-fluid" src="images/brand-logos.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Brand Section ENd Here -->
+
 
     <!--==| Main Section End Here |==-->
 
