--- a/index.html
+++ b/index.html
@@ -101,6 +101,48 @@
     </section>
     <!-- Brand Section ENd Here -->
 
+    <!-- Service Section Start Here -->
+    <section class="container py-5">
+        <div class="row">
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class="p-3 single-service text-center">
+                    <div class="service-icon text-center">
+                        <i class="fa-solid fa-users secondary-color"></i>
+                    </div>
+                    <h3 class="text-center mt-4">Experience</h3>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class="p-3 single-service text-center">
+                    <div class="service-icon text-center">
+                        <i class="fa-solid fa-car secondary-color"></i>
+                    </div>
+                    <h3 class="text-center mt-4">Fleet</h3>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class="p-3 single-service text-center">
+                    <div class="service-icon text-center">
+                        <i class="fa-solid fa-laptop secondary-color"></i>
+                    </div>
+                    <h3 class="text-center mt-4">Tech</h3>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class="p-3 single-service text-center">
+                    <div class="service-icon text-center">
+                        <i class="fa-regular fa-thumbs-up secondary-color"></i>
+                    </div>
+                    <h3 class="text-center mt-4">Peace of</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Service Section End Here -->
+
+    <!-- Why Us Section Start Here -->
+    <div class="why-us"></div>
+    <!-- Why Us Section End Here -->
 
     <!--==| Main Section End Here |==-->
 
