Why Us section end

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.scss">
     <link rel="stylesheet" href="css/style.css">
     <!--==| All CSS Link Integration Start |==-->
@@ -61,7 +62,7 @@
     <!--==| Main Section Start Here |==-->
 
     <!-- Banner Section Start Here -->
-    <section class="banner banner-bg">
+    <section class="banner banner-bg overflow-hidden">
         <div class="container banner-margin d-flex align-items-center vh-100 justify-content-end  z-3">
             <div class="book-form p-4 rounded-3">
                 <h3 class="text-capitalize text-white font-weight-bold">let’s book you a ride</h3>
@@ -91,7 +92,7 @@
     <!-- Banner Section End Here -->
 
     <!-- Brand Section Start Here -->
-    <section class="container brand-section py-2">
+    <section class="container brand-section py-2 overflow-hidden">
         <div class="brand">
             <h4 class="text-capitalize text-white font-weight-bold text-center">TRUSTED BY THE BEST</h4>
             <div class="text-center">
@@ -102,7 +103,7 @@
     <!-- Brand Section ENd Here -->
 
     <!-- Service Section Start Here -->
-    <section class="container py-5">
+    <section class="container py-5 overflow-hidden">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-12 ">
                 <div class="p-3 single-service text-center">
@@ -141,13 +142,49 @@
     <!-- Service Section End Here -->
 
     <!-- Why Us Section Start Here -->
-    <div class="why-us"></div>
+    <section class="why-us bg-light common-padding overflow-hidden">
+        <div class="container ">
+            <h1 class="text-uppercase text-center mb-4 fw-bold">Why Us</h1>
+            <div class="row g-5">
+                <div class="col-md-6 col-sm-6 col-12  ">
+                    <div class="our-img">
+                        <div class="position-relative">
+                            <img src="images/computer-img.jpg " alt="Online booking make easye" class="img-fluid w-100  ">
+                            <i class="bi bi-play play-icon  "></i>
+                        </div>
+                    </div>
+                    <div class="our-content">
+                        <h2 class="py-3 fw-semibold">Online booking make easy</h2>
+                        <p>Vivamus laoreet condimentum nulla eget bibendum. Integer condimentum sed lacus eget varius. Morbi sit amet nunc tempor, facilisis augue molestie, pharetra orci. Fusce volutpat mi sed nisl commodo, sed varius nulla mattis. Etiam a tellus ut velit malesuada mollis. Nullam nec maximus nibh.</p>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-6 col-12">
+                    <div class="position-relative">
+                        <img src="images/lady-in-car.jpg" alt="Online booking make easye" class="img-fluid w-100  ">
+                        <i class="bi bi-play play-icon  "></i>
+                    </div>
+                    <div class="our-content">
+                        <h2 class="py-3 fw-semibold">Focused on safety</h2>
+                        <p>Vivamus laoreet condimentum nulla eget bibendum. Integer condimentum sed lacus eget varius. Morbi sit amet nunc tempor, facilisis augue molestie, pharetra orci. Fusce volutpat mi sed nisl commodo, sed varius nulla mattis. Etiam a tellus ut velit malesuada mollis. Nullam nec maximus nibh.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Why Us Section End Here -->
+
+
 
     <!--==| Main Section End Here |==-->
 
+
+
     <!--==| All JS Link Integration Start |==-->
+    <script src="js/popper.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
     <!--==| All JS Link Integration End |==-->
 
 </body>
