Fleets section end

--- a/index.html
+++ b/index.html
@@ -173,10 +173,28 @@
     </section>
     <!-- Why Us Section End Here -->
 
+    <!-- Fleets Section Start Here -->
+    <section class="our-fleets common-padding blue-bg overflow-hidden">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <h1 class="text-uppercase text-center text-white mb-4 fw-bold">Our Fleets</h1>
+
+                    <div class="fleets-img owl-carousel owl-theme">
+                        <div class="item"><img src="images/sub.png" alt="Car"></div>
+                        <div class="item"><img src="images/sedan.png" class="w-100" alt="Car"></div>
+                        <div class="item"><img src="images/luxary-saden.png" alt="Car"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Fleets Section End Here -->
+
+
 
 
     <!--==| Main Section End Here |==-->
-
 
 
     <!--==| All JS Link Integration Start |==-->
