client section end

--- a/index.html
+++ b/index.html
@@ -191,6 +191,41 @@
     </section>
     <!-- Fleets Section End Here -->
 
+    <!-- Client Section Start Here -->
+    <section class=" client-section bg-black-color client-bg overflow-hidden">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 client-bg-img">
+                    <div class="mt-5 mb-4">
+                        <h1 class="text-uppercase text-center text-white mb-4 fw-bold">What Client Says</h1>
+                    </div>
+
+                    <div class=" person owl-carousel owl-theme">
+                        <div class="item client-item  d-flex flex-column text-center justify-content-center">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/client.png" alt="Car">
+                            </div>
+                            <p class="text-white mt-4">“RideCentric is an important and valued partner of  FC Dallas, Ridecentric always meets all of our transportation needs”</p>
+                        </div>
+                        <div class="item client-item  d-flex flex-column text-center justify-content-center">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/client.png" alt="Car">
+                            </div>
+                            <p class="text-white mt-4">“RideCentric is an important and valued partner of  FC Dallas, Ridecentric always meets all of our transportation needs”</p>
+                        </div>
+                        <div class="item client-item d-flex flex-column text-center justify-content-center">
+                            <div class="d-flex justify-content-center">
+                                <img src="images/client.png" alt="Car">
+                            </div>
+                            <p class="text-white mt-4">“RideCentric is an important and valued partner of  FC Dallas, Ridecentric always meets all of our transportation needs”</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Client Section End Here -->
+    
 
 
 
