Second Service Section Done

--- a/index.html
+++ b/index.html
@@ -226,6 +226,48 @@
     </section>
     <!-- Client Section End Here -->
     
+    <!-- Second Service Section Start Here -->
+    <section class="container py-5 overflow-hidden">
+        <div class="row">
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class=" other-single-service text-center">
+                    <div class="service-icon text-center">
+                        <img  src="images/diamond.svg" alt="">
+                    </div>
+                    <h4 class="text-center mt-3">Great Value</h4>
+                    <p>Lorem ipsum dolor ismit</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class=" other-single-service text-center">
+                    <div class="service-icon text-center">
+                        <img src="images/globe.svg" alt="">
+                    </div>
+                    <h4 class="text-center mt-4">Worldwide Tour</h4>
+                    <p>Lorem ipsum dolor ismit</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class= "other-single-service text-center">
+                    <div class="service-icon text-center">
+                        <img src="images/verify.svg" alt="">
+                    </div>
+                    <h4 class="text-center mt-4">Safe Payment</h4>
+                    <p>Lorem ipsum dolor ismit</p>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-12 ">
+                <div class="other-single-service text-center">
+                    <div class="service-icon text-center">
+                        <img src="images/microphone.svg" alt="">
+                    </div>
+                    <h4 class="text-center mt-4">Help Center</h4>
+                    <p>Lorem ipsum dolor ismit</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Second Service Section End Here -->
 
 
 
