--- a/index.html
+++ b/index.html
@@ -269,6 +269,31 @@
     </section>
     <!-- Second Service Section End Here -->
 
+    <!-- CTA Section Start Here -->
+    <section class="overflow-hidden">
+        <div class="container cta-container bg-light rounded-3 ">
+            <div class="row ">
+                <div class="col-md-3 cta-left">
+
+                </div>
+                <div class="col-md-6 common-padding">
+                    <h1 class="text-center black-gray fw-bold">Let’s Get Connected Together</h1>
+                    <p class="text-center">Book a ride today and be a part of the ridecentric family</p>
+                    <div class="text-center">
+                        <a href="#book-now">
+                            <button class="btn hover:text-white book-now secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill fw-bold"  >Book Now</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3 cta-right">
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- CTA Section End Here -->
+
+
 
 
     <!--==| Main Section End Here |==-->
