Graph image section done

--- a/index.html
+++ b/index.html
@@ -293,7 +293,10 @@
     </section>
     <!-- CTA Section End Here -->
 
-
+    <!-- Graph-img Section End Here -->
+    <section class="graph-section">
+        <img class="img-fluid w-100" src="images/client-bg.png" alt="">
+    </section>
 
 
     <!--==| Main Section End Here |==-->
