--- a/index.html
+++ b/index.html
@@ -301,6 +301,49 @@
 
     <!--==| Main Section End Here |==-->
 
+    <!--==| Footer Section Start Here |==-->
+    <footer class="overflow-hidden p-0 m-0 footer-section">
+        <div class="footer-top common-padding">
+            <div class="container p-0">
+                <div class="row g-5">
+                    <div class="col-md-5 ">
+                        <h4 class="text-white">Stay Connected</h4>
+                        <p class="text-white mt-3">4517 Washington Ave. Manchester, Kentucky 39495</p>
+                        <p class="text-white mt-3">Got Question? Call us 24/7</p>
+                        <p class="text-white">+1-214-574-5900</p>
+                    </div>
+                    <div class="col-md-3 ">
+                        <h4 class="text-white">Links</h4>
+                        <ul class="ps-0 mt-3">
+                            <li><a class="text-white" href="#privacy"><p class="text-white" >Privacy Policy</p ></a></li>
+                            <li><a class="text-white" href="#terms"><p class="text-white">Terms of Use</p></a></li>
+                            <li><a class="text-white" href="#covid"><p class="text-white" >Covid Protocols</p></a></li>
+                            <li><a class="text-white"  href="#transparent"><p class="text-white">Transportation Terms</p></a></li>
+                            <li><a class="text-white" href="#cookies"><p class="text-white" >Cookies Policies</p> </a></li>
+                            <li><a class="text-white" href="#affilate"><p class="text-white">Affiliate Login</p></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 ">
+                        <h4 class="text-white">Subscribe To Us</h4>
+                        <div class="mt-4">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Input your email address" aria-label="Recipient's username" aria-describedby="button-addon2">
+                            </div>
+                            <div class="d-flex justify-content-end ">
+                                <button class="btn btn-outline-secondary rounded-pill footer-button text-white px-3" type="button" id="button-addon2">Subscribe</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom pt-3">
+            <div class="container p-0">
+               <p class="text-white text-center">Copyright &copy; 2021 ridecentric.com All Rights Reserved</p>
+            </div>
+        </div>
+    </footer>
+    <!--==| Footer Section End Here |==-->
 
     <!--==| All JS Link Integration Start |==-->
     <script src="js/popper.min.js"></script>
