--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <p class="text-center">Book a ride today and be a part of the ridecentric family</p>
                     <div class="text-center">
                         <a href="#book-now">
-                            <button class="btn hover:text-white book-now secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill fw-bold"  >Book Now</button>
+                            <button class="btn book-now secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill fw-bold shadow-lg bg-white"  >Book Now</button>
                         </a>
                     </div>
                 </div>
