--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                         <div class="collapse navbar-collapse " id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto my-auto mb-2 mb-lg-0 d-flex align-items-center">
                                 <li class="nav-item  text-center mx-xl-3 mx-lg-2 mx-md-2">
-                                    <a class="nav-link active fw-bold fs-5" aria-current="page" href="#login">      
-                                        <img class="user-img" src="images/user.png" alt="User Image">
+                                    <a class="nav-link active fw-bold fs-5 d-flex align-items-center  aria-current="page" href="#login">      
+                                        <!-- <img class="user-img" src="images/user.png" alt="User Image"> -->
+                                        <i class="bi bi-person user-icon"></i>
                                         <span class="small-font text-white nav-color">LOGIN</span>
                                     </a>
                                 </li>
