--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                         <button class="btn hover:text-white book-now secondary-color px-lg-4 px-md-3 px-sm-2 px-2 py-lg-2 py-md-1 py-sm-1 py-1  text-uppercase small-font rounded-pill" >Book Now</button>
                                     </a>
                                 </li>
-                                <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2">
+                                <li class="nav-item text-center mx-xl-3 mx-lg-2 mx-md-2 d-lg-block d-none">
                                     <a class="nav-link fw-bold fs-5" href="#nav-collapse"><i class="bi bi-text-right text-white fs-3"></i></a>
                                 </li>
                             </ul>
@@ -184,9 +184,9 @@
                     <h1 class="text-uppercase text-center text-white mb-sm-4 mb-2 fw-bold">Our Fleets</h1>
 
                     <div class="fleets-img owl-carousel owl-theme">
-                        <div class="item"><img src="images/sub.png" alt="Car"></div>
-                        <div class="item"><img src="images/sedan.png" class="w-100" alt="Car"></div>
-                        <div class="item"><img src="images/luxary-saden.png" alt="Car"></div>
+                        <div class="item d-flex justify-content-center"><img class="rounded-4" src="images/sub.png" alt="Car"></div>
+                        <div class="item d-flex justify-content-center"><img class="rounded-4" src="images/sedan.png"  alt="Car"></div>
+                        <div class="item d-flex justify-content-center"><img class="rounded-" src="images/luxary-saden.png" alt="Car"></div>
                     </div>
                 </div>
             </div>
