Time icon Added

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                     <ul class="d-flex tab-i  ps-0">
                         <li class="flex-fill tab me-2 py-1"><img class="user-img me-2" src="images/date.png" alt="">  <a class="text-decoration-none text-white" href="#">When</a></li>
-                        <li class="flex-fill tab py-1"><img class="user-img me-2" src="images/date.png" alt=""> <a class="text-decoration-none text-white" href="#">Time</a></li>
+                        <li class="flex-fill tab py-1"><img class="user-img me-2" src="images/time.png" alt=""> <a class="text-decoration-none text-white" href="#">Time</a></li>
                     </ul>
                     <ul class="d-flex tab-i  ps-0">
                         <li class="flex-fill tab  py-1"><img class="user-img me-2" src="images/location.png" alt="">  <a class="text-decoration-none text-white" href="#">Pick Up Location</a></li>
