Project finally done

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="col-md-6 col-sm-6 col-12  ">
                     <div class="our-img">
                         <div class="position-relative">
-                            <img src="images/computer-img.jpg " alt="Online booking make easye" class="img-fluid w-100  ">
+                            <img src="images/computer-img.jpg " alt="Online booking make easye" class="img-fluid w-100  rounded-3">
                             <i class="bi bi-play play-icon  "></i>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-md-6 col-sm-6 col-12">
                     <div class="position-relative">
-                        <img src="images/lady-in-car.jpg" alt="Online booking make easye" class="img-fluid w-100  ">
+                        <img src="images/lady-in-car.jpg" alt="Online booking make easye" class="img-fluid w-100 rounded-3 ">
                         <i class="bi bi-play play-icon  "></i>
                     </div>
                     <div class="our-content">
