Little color change & project done

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="service-icon text-center">
                         <img  src="images/diamond.svg" alt="">
                     </div>
-                    <h4 class="text-center mt-sm-3 mt-2">Great Value</h4>
+                    <h4 class="text-center mt-sm-3 mt-2 fw-semibold service-title">Great Value</h4>
                     <p>Lorem ipsum dolor ismit</p>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                     <div class="service-icon text-center">
                         <img src="images/globe.svg" alt="">
                     </div>
-                    <h4 class="text-center mt-sm-4 mt-2">Worldwide Tour</h4>
+                    <h4 class="text-center mt-sm-4 mt-2 fw-semibold service-title">Worldwide Tour</h4>
                     <p>Lorem ipsum dolor ismit</p>
                 </div>
             </div>
@@ -255,7 +255,7 @@
                     <div class="service-icon text-center">
                         <img src="images/verify.svg" alt="">
                     </div>
-                    <h4 class="text-center mt-sm-4 mt-2 ">Safe Payment</h4>
+                    <h4 class="text-center mt-sm-4 mt-2 fw-semibold service-title">Safe Payment</h4>
                     <p>Lorem ipsum dolor ismit</p>
                 </div>
             </div>
@@ -264,7 +264,7 @@
                     <div class="service-icon text-center">
                         <img src="images/microphone.svg" alt="">
                     </div>
-                    <h4 class="text-center mt-4">Help Center</h4>
+                    <h4 class="text-center mt-4 fw-semibold service-title">Help Center</h4>
                     <p>Lorem ipsum dolor ismit</p>
                 </div>
             </div>
